# fuse-native

./: .editorconfig  .eslintrc.cjs  .gitignore  .prettierrc.json  AGENTS.md  BINDING_ANALYSIS_REPORT.md  BUF_OPERATIONS_FIX.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CRUSH.md  DEBUGGING.md  FIXES.md  FLUSH_FIX_SUMMARY.md  Implementation.md  Interface.md  MAIN_TRANSITION_STATUS.md  MKDIR_EXAMPLE_IMPL.md  PHASE7_SUMMARY.md  PLAN.md  README.md  READ_WRITE_RETURN_ANALYSIS.md  TASK_COMPLETED.md  TODO.md  binding.gyp  fuse-native.c  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  test_copy_file_range.sh  test_copy_file_range_nodejs.js  test_direct_copy_file_range.js  test_simple_copy_file_range.js  tsconfig.json
.github/workflows/: ci.yml
docs/: api.md  cancellation.md  concurrency.md  errors.md  mount.md  performance.md  phase5-statfs-implementation.md  readdir.md  time.md  xattr.md
examples/: README.md  fuse-proxy-quiet.js  fuse-proxy.js  init-bridge-demo.js  inmemory-fs.mjs  logging_example.cc  start-inmemory-fs.sh  test-proxy.sh
examples/inmemory-fs/: README.md  package-lock.json  package.json  tsconfig.json
old-reference-implementation/: binding.gyp  fuse-native.c  index.d.ts
old-reference-implementation/example/: test-proxy.sh
old-reference-implementation/test/: README.md  jest.test.js
prebuilds/linux-x64/: @cocalc+fuse-native.node
src/: buffer_bridge.cc  buffer_bridge.h  copy_file_range.cc  copy_file_range.h  errno_mapping.cc  errno_mapping.h  fuse_bridge.cc  fuse_bridge.h  init_bridge.cc  init_bridge.h  logging.cc  logging.h  main.cc  main_minimal.cc  napi_bigint.cc  napi_bigint.h  napi_helpers.cc  napi_helpers.h  operations.cc  operations.h  session_manager.cc  session_manager.h  shutdown.cc  shutdown.h  statfs_bridge.cc  statfs_only.cc  timespec_codec.cc  timespec_codec.h  tsfn_dispatcher.cc  tsfn_dispatcher.h  write_queue.cc  write_queue.h  xattr_bridge.cc  xattr_bridge.h
test/: abort.spec.ts  access.test.ts  big.js  bmap.test.ts  buf-callback-fix.js  buf-operations.js  buf-signature-test.js  buffer-bridge.test.ts  chmod.test.ts  chown.test.ts  copy-file-range.test.ts  copy.js  copy_file_range.js  create.test.ts  errors.test.ts  example-usage.js  fallocate.test.ts  flock.test.ts  flush.test.ts  fsync.test.ts  fsyncdir.test.ts  fuse-operations.test.js  getattr.test.ts  helpers-dirent.test.ts  init-bridge.test.ts  ioctl.test.ts  link.test.ts  lock.test.ts  lseek.test.ts  memory-fs.js  mkdir.test.ts  mknod.test.ts  new_functions.js  open.test.ts  poll.test.ts  read.js  read.test.ts  read_buf.test.ts  readdir-errors.test.ts  readdir.test.ts  (+23 more)
test/fixtures/: simple-fs.js
test/integration/: fuse-bridge.test.ts  operations.test.ts
ts/: abort.ts  binding-loader.js  constants.ts  errno.ts  errors.ts  helpers.ts  index.ts  operations.ts  session.ts  time.ts  types.ts
ts/ops/: access.ts  bmap.ts  chmod.ts  chown.ts  copy_file_range.ts  create.ts  fallocate.ts  flock.ts  flush.ts  fsync.ts  fsyncdir.ts  getattr.ts  index.ts  ioctl.ts  link.ts  lock.ts  lseek.ts  mkdir.ts  mknod.ts  open.ts  opendir.ts  poll.ts  read.ts  read_buf.ts  readdir.ts  readlink.ts  (+11 more)
(+92 files in other folders)
